crates/shipper-core/src/ops/git/snapshots/shipper_core__ops__git__context__snapshot_tests__clean_working_tree.snap
---
source: crates/shipper-core/src/ops/git/context.rs
expression: ctx
---
commit: abc1234567890abc1234567890abc1234567890ab
branch: main
tag: ~
dirty: false
