crates/shipper-core/src/ops/git/snapshots/shipper_core__ops__git__context__snapshot_tests__dirty_default_behavior.snap
---
source: crates/shipper-core/src/ops/git/context.rs
expression: result
---
dirty_field: ~
is_dirty_result: true
