crates/shipper-core/src/ops/git/snapshots/shipper_core__ops__git__context__snapshot_tests__ensure_git_clean_error.snap
---
source: crates/shipper-core/src/ops/git/context.rs
expression: err.to_string()
---
git working tree has uncommitted changes. Use --allow-dirty to bypass.
