crates/shipper-core/src/ops/git/snapshots/shipper_core__ops__git__context__snapshot_tests__git_context_commit_only.snap
---
source: crates/shipper-core/src/ops/git/context.rs
expression: ctx
---
commit: deadbeefdeadbeefdeadbeefdeadbeefdeadbeef
branch: ~
tag: ~
dirty: ~
