crates/shipper-core/src/ops/git/snapshots/shipper_core__ops__git__context__snapshot_tests__git_context_dirty_no_tag.snap
---
source: crates/shipper-core/src/ops/git/context.rs
expression: ctx
---
commit: ff00ff00ff00ff00ff00ff00ff00ff00ff00ff00
branch: feature/add-tests
tag: ~
dirty: true
