crates/shipper-core/src/ops/git/snapshots/shipper_core__ops__git__context__snapshot_tests__git_context_empty.snap
---
source: crates/shipper-core/src/ops/git/context.rs
expression: ctx
---
commit: ~
branch: ~
tag: ~
dirty: ~
