crates/shipper-core/src/ops/git/snapshots/shipper_core__ops__git__context__snapshot_tests__git_context_full.snap
---
source: crates/shipper-core/src/ops/git/context.rs
expression: ctx
---
commit: a1b2c3d4e5f6a1b2c3d4e5f6a1b2c3d4e5f6a1b2
branch: main
tag: v1.2.3
dirty: false
