crates/shipper-core/src/ops/git/snapshots/shipper_core__ops__git__context__snapshot_tests__git_rev_parse_failed_error.snap
---
source: crates/shipper-git/src/lib.rs
expression: err.to_string()
---
"git rev-parse failed: fatal: ambiguous argument 'HEAD': unknown revision"
