crates/shipper-core/src/ops/git/snapshots/shipper_core__ops__git__context__snapshot_tests__git_status_failed_error.snap
---
source: crates/shipper-core/src/ops/git/context.rs
expression: err.to_string()
---
"git status failed: fatal: not a git repository"
