crates/shipper-core/src/ops/git/snapshots/shipper_core__ops__git__context__snapshot_tests__tag_absent.snap
---
source: crates/shipper-core/src/ops/git/context.rs
expression: ctx
---
commit: "3333333333333333333333333333333333333333"
branch: develop
tag: ~
dirty: false
