crates/shipper-core/src/ops/git/snapshots/shipper_core__ops__git__context__snapshot_tests__tag_dirty_tree.snap
---
source: crates/shipper-core/src/ops/git/context.rs
expression: ctx
---
commit: "4444444444444444444444444444444444444444"
branch: main
tag: v1.0.0
dirty: true
